<resources>
    <string name="gk">Gian Guatibonza</string>
    <string name="nandy">Luisa Chacón</string>
    <string name="kolarte">Kevin Olarte</string>
    <string name="leo">Leonardo Angulo</string>
    <string name="app_name">Deontologia</string>
    <string name="nombreJuego">INGENIEROS AL PODER</string>
    <string name="iniciar">Iniciar Juego</string>
    <string name="comoJugar">Como Jugar</string>
    <string name="AcercaApp">Acerca de la APP</string>
    <string name="programadores">PROGRAMADORES</string>
    <string name="eleccionAvatar">ESCOGE TU AVATAR</string>
    <string name="hazEscogidoA">Tu Personaje Es: </string>
    <string name="aceptar">Continuar</string>
    <string name="preguntaprueba">¿Qué es deontología?</string>
    <string name="etica">A. Ética</string>
    <string name="proyección">B. Proyección</string>
    <string name="analisis">C. Análisis</string>
    <string name="aspiracion">D. Aspiración</string>
    <string name="respuestaCorrecta">TU RESPUESTA ES CORRECTA</string>
    <string name="respuestaIncorrecta">EXPLICACIÓN</string>
    <string name="textoPor">Esta APP fue pensada para educar a los alumnos de Ingenieria de sistemas que estan cursando los primeros semestres de sus carrera sobre temas relacionados con la etica profesional.</string>
    <string name="todo">TODO</string>
    <string name="puntaje">TU PUNTAJE:</string>
    <string name="instrucciones">Cada jugador debe elegir el avatar con el que lo acompañará durante el juego, y luego le da continuar paara empezar el juego, aparecen preguntas respecto a la deontología del ingeniero de sistemas, según sea la respuesta si es correcta y es de difícultad alta saldrá el avatar felicitando, y cuando sea incorrecto saldrá la explicación para que el estudiante entienda las preguntas y al entenderla podrá continuar el juego</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="logroCumplido">BIEN HECHO</string>

</resources>
