<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="co.com.gguatibonza.deontologia.PreguntaFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#CCffffff"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/Pregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:gravity="center"
            android:text="@string/preguntaprueba"
            android:textColor="#000"
            android:textSize="16dp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/rtaA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#7B1FA2"
            android:gravity="center"
            android:text="@string/etica"
            android:textSize="12dp" />

        <Button
            android:id="@+id/rtaB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFC107"
            android:gravity="center"
            android:text="@string/proyección"
            android:textSize="12dp" />


        <Button
            android:id="@+id/rtaC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#00796B"
            android:gravity="center"
            android:text="@string/analisis"
            android:textSize="12dp" />

        <Button
            android:id="@+id/rtaD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FF5252"
            android:gravity="center"
            android:text="@string/aspiracion"
            android:textSize="12dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="right"
        android:layout_margin="5dp" />

</LinearLayout>
