<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="co.com.gguatibonza.deontologia.IncorrectoFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/respuestaIncorrecta"
        android:textSize="30dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/imagenIncorrecta"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/women" />

         <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             app:cardBackgroundColor="#CCffffff">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preguntaprueba"
                android:textSize="18dp"
                android:gravity="center"
                android:layout_margin="5dp"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#CCffffff">

        <TextView
            android:id="@+id/respuestaCorrecta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etica"
        android:textSize="18dp"
        android:layout_margin="5dp"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#CCffffff">

        <TextView
            android:id="@+id/traerExplicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="explicación"
            android:textSize="18dp"
            android:layout_margin="5dp"/>


        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/continuarIncorrecta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/aceptar"
            android:background="@drawable/boton"
            android:textColor="#FFF"/>
    </LinearLayout>

</FrameLayout>
